# Luxana

./: .gitignore  Cargo.toml  LICENSE  README.md  scenario.md  workshop.ase
archive/audio/: asset.rs  mod.rs
archive/fixed/: root2d.rs  root3d.rs
archive/flat_ecs/: chunk.rs  mod.rs  root2d.rs  root3d.rs
archive/networking/: client.rs  mod.rs  protocol.rs
archive/stat/: mod.rs
archive/state/: dev.rs  mod.rs
src/: lib.rs
src/ai/: mod.rs
src/audio/: mod.rs
src/camera/: anchor.rs  focus.rs  mod.rs  orbit.rs  zoom.rs
src/character/: mod.rs
src/character/movement/: fixed.rs  grid.rs  mod.rs
src/character/movement/physics/: mod.rs  spring.rs  thrust.rs
src/character/turret/: mod.rs
src/data/: asset.rs  mod.rs
src/gui/: button.rs  collider.rs  color.rs  cursor.rs  follow.rs  image.rs  label.rs  layout.rs  menu.rs  mod.rs  pos.rs
src/input/: device.rs  mod.rs  raw.rs
src/input/actions/: binding.rs  mod.rs
src/level/: heightmap.rs  mod.rs  overworld.rs
src/networking/: server.rs
src/particles/: mod.rs
src/player/: manager.rs  mod.rs  splitscreen.rs
src/render/: instancing.wgsl  mod.rs
src/state/: mod.rs
src/thing/: mod.rs
src/thing/actor/: mod.rs
src/thing/actor/movement/: mod.rs
src/thing/actor/turret/: mod.rs
src/thing/emitter/: mod.rs
src/thing/interactor/: grabber.rs  mod.rs
src/thing/item/: mod.rs
src/thing/movement/: fixed.rs  grid.rs  mod.rs
src/thing/movement/physics/: mod.rs  spring.rs  thrust.rs
src/thing/part/: body.rs  hitbox.rs  mod.rs  socket.rs
src/thing/projectile/: mod.rs
src/thing/stat/: mod.rs
src/thing/turret/: mod.rs
src/util/: bitflag.rs  bitmask.rs  bundle.rs  database.rs  image.rs  math.rs  mod.rs  noise.rs  serial.rs  thread.rs
src/util/generics/: animation.rs  lifetime.rs  mod.rs  ray.rs  validate.rs
src/util/mesh/: gltf.rs  mod.rs  tile.rs  voxel.rs
src/voxel/: mod.rs  traits.rs
src/voxel/flat/: chunk.rs  mod.rs
(+4 files in other folders)
